[project]
name = "recipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-material>=9.7.0",
    "mkdocs-material-extensions>=1.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
